# Chorus

./: .env.example  README.md  pyproject.toml  setup.py
chorus/: __init__.py
chorus/aggregation/: judge.py
chorus/benchmarks/: runner.py
chorus/client/: grpc_client.py
chorus/core/: chorus.py  gpu_manager.py
chorus/dashboard/: visualizer.py
chorus/server/: grpc_server.py
chorus/server/protos/: __init__.py  inference.proto  inference_pb2.py  inference_pb2_grpc.py
examples/: simple_usage.py
